--- a/development/style.css
+++ b/development/style.css
@@ -37,7 +37,7 @@ body {
 
 .video-container {
   width: 100%;
-  height: 85vh;
+  height: calc(100vh - 100px);
   scroll-snap-type: y mandatory;
   align-content: center;
   justify-content: center;
@@ -66,6 +66,6 @@ body {
 
 .video {
   width: 100%;
-  height: 100%;
+  height: 85%;
   object-fit: contain;
 }
