--- a/development/style.css
+++ b/development/style.css
@@ -19,7 +19,7 @@ body {
 
 .auto-scroll-button {
   margin: 5px auto;
-  display: block;
+  display: hidden;
   padding: 10px 20px;
   border-radius: 20px;
   border: none;
@@ -37,7 +37,7 @@ body {
 
 .video-container {
   width: 100%;
-  height: 85vh;
+  height: 100vh;
   scroll-snap-type: y mandatory;
   align-content: center;
   justify-content: center;
