--- a/development/style.css
+++ b/development/style.css
@@ -18,8 +18,11 @@ body {
 }
 
 .auto-scroll-button {
+  position: absolute;
+  bottom: 20px; /* Ajuste para a distância da parte inferior da tela */
+  right: 20px; /* Ajuste para a distância da lateral direita da tela */
   margin: 5px auto;
-  display: hidden;
+  display: block; /* Alterado de hidden para block para exibir o botão */
   padding: 10px 20px;
   border-radius: 20px;
   border: none;
@@ -37,7 +40,7 @@ body {
 
 .video-container {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   scroll-snap-type: y mandatory;
   align-content: center;
   justify-content: center;
