--- a/development/style.css
+++ b/development/style.css
@@ -18,11 +18,8 @@ body {
 }
 
 .auto-scroll-button {
-  position: absolute;
-  bottom: 20px; /* Ajuste para a distância da parte inferior da tela */
-  right: 20px; /* Ajuste para a distância da lateral direita da tela */
   margin: 5px auto;
-  display: block; /* Alterado de hidden para block para exibir o botão */
+  display: block;
   padding: 10px 20px;
   border-radius: 20px;
   border: none;
@@ -40,7 +37,7 @@ body {
 
 .video-container {
   width: 100%;
-  height: 90vh;
+  height: 600px;
   scroll-snap-type: y mandatory;
   align-content: center;
   justify-content: center;
