--- a/development/style.css
+++ b/development/style.css
@@ -39,12 +39,11 @@ body {
   width: 100%;
   height: 650px;
   scroll-snap-type: y mandatory;
+  scroll-snap-points-y: repeat(200%); 
   align-content: center;
   justify-content: center;
   overflow-y: scroll;
   position: relative;
-  scroll-snap-align: center; /* Alinha o centro */
-  scroll-snap-stop: always;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
 }
