--- a/development/style.css
+++ b/development/style.css
@@ -16,9 +16,19 @@ body {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
 }
+.filter-select{
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: none;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  backdrop-filter: blur(5px);
+  transition: background 0.3s;
+}
 
 .auto-scroll-button {
-  margin: 5px auto;
   display: block;
   padding: 10px 20px;
   border-radius: 20px;
@@ -33,6 +43,14 @@ body {
 
 .auto-scroll-button:hover {
   background: rgba(0, 0, 0, 0.8);
+}
+
+.controls-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  padding: 5px;
 }
 
 .video-container {
