--- a/development/src/index.css
+++ b/development/src/index.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    margin: 0 !important;
+    color: white;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: orange;
+    border: 2px solid rgb(255, 255, 255);
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+  
+  input[type="range"]::-moz-range-thumb {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: orange;
+    border: 2px solid rgb(255, 255, 255);
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+  
+  input[type="range"]:hover::-webkit-slider-thumb,
+  input[type="range"]:hover::-moz-range-thumb {
+    background: #ffcc80;
+  }
+  
