--- a/development/src/index.css
+++ b/development/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+*:focus {
+  outline: none;
+}
+
 * {
     margin: 0 !important;
     color: white;
@@ -14,7 +18,6 @@ input[type="range"]::-webkit-slider-thumb {
     height: 16px;
     border-radius: 50%;
     background: orange;
-    border: 2px solid rgb(255, 255, 255);
     cursor: pointer;
     transition: background 0.3s ease;
   }
@@ -24,7 +27,6 @@ input[type="range"]::-webkit-slider-thumb {
     height: 16px;
     border-radius: 50%;
     background: orange;
-    border: 2px solid rgb(255, 255, 255);
     cursor: pointer;
     transition: background 0.3s ease;
   }
